# POD

./: README.md  compilerun.txt
cmake/: CMakeLists.txt
examples/Ge/: fit.pod  fpod_coefficients.pod  fpod_param.pod  fpod_test_analysis.pod  fpod_test_errors.pod  fpod_training_analysis.pod  fpod_training_errors.pod  log.lammps  podfit.py
examples/InP/: compute.pod  fpod_coefficients.pod  fpod_param.pod  fpod_training_analysis.pod  fpod_training_errors.pod  log.lammps  poddesc.py  podfit.jl
examples/Mo/: fpod_coefficients.pod  fpod_param.pod  fpod_test_analysis.pod  fpod_test_errors.pod  fpod_training_analysis.pod  fpod_training_errors.pod  log.lammps
examples/Si/: fpod_coefficients.pod  fpod_param.pod  fpod_test_analysis.pod  fpod_test_errors.pod  fpod_training_analysis.pod  fpod_training_errors.pod  log.lammps
examples/Ta/: data.pod  fpod_coefficients.pod  fpod_param.pod  fpod_training_analysis.pod  fpod_training_errors.pod  log.lammps  pod.txt~  poddesc.jl
examples/TiO2/: fit.pod  fpod_coefficients.pod  fpod_param.pod  fpod_test_analysis.pod  (+4 more)
src/: Makefile  POD.jl  POD.py  correct_intermediate.txt  cpuArrayOperations.cpp  full_correct.txt  gen.cpp  lsp.m  main.cpp  pairpod.cpp  pairpod.cpp~  pairpod.h  pairpod.h~  pod  pod.cpp  pod.cpp~  pod.h  pod.h~  podarrayfunctions.cpp  podcommon.h  poddesc1.stmt  poddescriptors.cpp  poddescriptors.cpp~  podenergyforce.cpp  podenergyforce.cpp~  podfit.cpp  podfit.h  podfitting.cpp  podfitting.cpp~  podinputfiles.cpp  podneighborlist.cpp  podsnap.cpp  readinputfiles.cpp  readinputfiles.cpp~  ricardo_temp.txt  snap.cpp
(+42 files in other folders)
